externals/tecio/teciosrc/TECIO.h

EXTERNC tecio_API int32_t tecZoneVarWriteUInt8Values(
    void*          fileHandle,
    int32_t        zone,
    int32_t        var,
    int32_t        partition,
    int64_t        count,
    uint8_t const* values);
EXTERNC tecio_API int32_t tecZoneNodeMapWrite32(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int32_t        nodesAreOneBased,
    int64_t        count,
    int32_t const* nodes);
EXTERNC tecio_API int32_t tecZoneNodeMapWrite64(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int32_t        nodeAreOneBased,
    int64_t        count,
    int64_t const* nodes);
EXTERNC tecio_API int32_t tecZoneFaceNbrWriteConnections32(
    void*          fileHandle,
    int32_t        zone,
    int32_t const* faceNeighbors);
EXTERNC tecio_API int32_t tecZoneFaceNbrWriteConnections64(
    void*          fileHandle,
    int32_t        zone,
    int64_t const* faceNeighbors);
EXTERNC tecio_API int32_t tecZoneWritePolyFaces32(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int32_t        numFaces,
    int32_t const* faceNodeCounts,
    int32_t const* faceNodes,
    int32_t const* faceLeftElems,
    int32_t const* faceRightElems,
    int32_t        isOneBased);
EXTERNC tecio_API int32_t tecZoneWritePolyFaces64(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int64_t        numFaces,
    int32_t const* faceNodeCounts,
    int64_t const* faceNodes,
    int64_t const* faceLeftElems,
    int64_t const* faceRightElems,
    int32_t        isOneBased);
EXTERNC tecio_API int32_t tecZoneWritePolyBoundaryConnections32(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int32_t        numBoundaryFaces,
    int32_t const* faceBoundaryConnectionCounts,
    int32_t const* faceBoundaryConnectionElems,
    int32_t const* faceBoundaryConnectionZones,
    int32_t        isOneBased);
EXTERNC tecio_API int32_t tecZoneWritePolyBoundaryConnections64(
    void*          fileHandle,
    int32_t        zone,
    int32_t        partition,
    int64_t        numBoundaryFaces,
    int32_t const* faceBoundaryConnectionCounts,
    int64_t const* faceBoundaryConnectionElems,
    int32_t const* faceBoundaryConnectionZones,
    int32_t        isOneBased);
EXTERNC tecio_API int32_t tecDataSetAddAuxData(
    void*       fileHandle,
    char const* name,
    char const* value);
EXTERNC tecio_API int32_t tecVarAddAuxData(
    void*       fileHandle,
    int32_t     var,
    char const* name,
    char const* value);
EXTERNC tecio_API int32_t tecZoneAddAuxData(
    void*       fileHandle,
    int32_t     zone,
    char const* name,
    char const* value);
EXTERNC tecio_API int32_t tecGeom2DLineSegmentsBegin(
    void*          fileHandle,
    double         xOrigin,
    double         yOrigin,
    int32_t        numPoints,
    double const*  relativeX,
    double const*  relativeY,
    int32_t        posCoordMode);
EXTERNC tecio_API int32_t tecGeom2DMultiLineSegmentsBegin(
    void*          fileHandle,
    double         xOrigin,
    double         yOrigin,
    int32_t        numSegments,
    int32_t const* numSegmentPoints,
    double const*  relativeX,
    double const*  relativeY,
    int32_t        posCoordMode);
EXTERNC tecio_API int32_t tecGeom3DLineSegmentsBegin(
    void*          fileHandle,
    double         xOrigin,
    double         yOrigin,
    double         zOrigin,
    int32_t        numPoints,
    double const*  relativeX,
    double const*  relativeY,
    double const*  relativeZ);
EXTERNC tecio_API int32_t tecGeom3DMultiLineSegmentsBegin(
    void*          fileHandle,
    double         xOrigin,
    double         yOrigin,
    double         zOrigin,
    int32_t        numSegments,
    int32_t const* numSegmentPoints,
    double const*  relativeX,
    double const*  relativeY,
    double const*  relativeZ);
EXTERNC tecio_API int32_t tecGeomCircleBegin(
    void*   fileHandle,
    double  xCenter,
    double  yCenter,
    double  radius,
    int32_t posCoordMode);
EXTERNC tecio_API int32_t tecGeomEllipseBegin(
    void*   fileHandle,
    double  xCenter,
    double  yCenter,
    double  width,
    double  height,
    int32_t posCoordMode);