externals/tecio/teciosrc/tecio.f90


integer(c_int32_t) function tecZoneVarWriteUInt8Values( &
    fileHandle, &
    zone, &
    var, &
    partition, &
    count, &
    values) &
    bind(c, name="tecZoneVarWriteUInt8Values")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: var
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: count
    integer(c_int8_t), intent(in)         :: values(*)
end function tecZoneVarWriteUInt8Values

integer(c_int32_t) function tecZoneNodeMapWrite32( &
    fileHandle, &
    zone, &
    partition, &
    nodesAreOneBased, &
    count, &
    nodes) &
    bind(c, name="tecZoneNodeMapWrite32")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int32_t), value, intent(in) :: nodesAreOneBased
    integer(c_int64_t), value, intent(in) :: count
    integer(c_int32_t), intent(in)        :: nodes(*)
end function tecZoneNodeMapWrite32

integer(c_int32_t) function tecZoneNodeMapWrite64( &
    fileHandle, &
    zone, &
    partition, &
    nodeAreOneBased, &
    count, &
    nodes) &
    bind(c, name="tecZoneNodeMapWrite64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int32_t), value, intent(in) :: nodeAreOneBased
    integer(c_int64_t), value, intent(in) :: count
    integer(c_int64_t), intent(in)        :: nodes(*)
end function tecZoneNodeMapWrite64

integer(c_int32_t) function tecZoneFaceNbrWriteConnections32( &
    fileHandle, &
    zone, &
    faceNeighbors) &
    bind(c, name="tecZoneFaceNbrWriteConnections32")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), intent(in)        :: faceNeighbors(*)
end function tecZoneFaceNbrWriteConnections32

integer(c_int32_t) function tecZoneFaceNbrWriteConnections64( &
    fileHandle, &
    zone, &
    faceNeighbors) &
    bind(c, name="tecZoneFaceNbrWriteConnections64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int64_t), intent(in)        :: faceNeighbors(*)
end function tecZoneFaceNbrWriteConnections64

integer(c_int32_t) function tecZoneWritePolyFaces32( &
    fileHandle, &
    zone, &
    partition, &
    numFaces, &
    faceNodeCounts, &
    faceNodes, &
    faceLeftElems, &
    faceRightElems, &
    isOneBased) &
    bind(c, name="tecZoneWritePolyFaces32")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int32_t), value, intent(in) :: numFaces
    integer(c_int32_t), intent(in)        :: faceNodeCounts(*)
    integer(c_int32_t), intent(in)        :: faceNodes(*)
    integer(c_int32_t), intent(in)        :: faceLeftElems(*)
    integer(c_int32_t), intent(in)        :: faceRightElems(*)
    integer(c_int32_t), value, intent(in) :: isOneBased
end function tecZoneWritePolyFaces32

integer(c_int32_t) function tecZoneWritePolyFaces64( &
    fileHandle, &
    zone, &
    partition, &
    numFaces, &
    faceNodeCounts, &
    faceNodes, &
    faceLeftElems, &
    faceRightElems, &
    isOneBased) &
    bind(c, name="tecZoneWritePolyFaces64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: numFaces
    integer(c_int32_t), intent(in)        :: faceNodeCounts(*)
    integer(c_int64_t), intent(in)        :: faceNodes(*)
    integer(c_int64_t), intent(in)        :: faceLeftElems(*)
    integer(c_int64_t), intent(in)        :: faceRightElems(*)
    integer(c_int32_t), value, intent(in) :: isOneBased
end function tecZoneWritePolyFaces64

integer(c_int32_t) function tecZoneWritePolyBoundaryConnections32( &
    fileHandle, &
    zone, &
    partition, &
    numBoundaryFaces, &
    faceBoundaryConnectionCounts, &
    faceBoundaryConnectionElems, &
    faceBoundaryConnectionZones, &
    isOneBased) &
    bind(c, name="tecZoneWritePolyBoundaryConnections32")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int32_t), value, intent(in) :: numBoundaryFaces
    integer(c_int32_t), intent(in)        :: faceBoundaryConnectionCounts(*)
    integer(c_int32_t), intent(in)        :: faceBoundaryConnectionElems(*)
    integer(c_int32_t), intent(in)        :: faceBoundaryConnectionZones(*)
    integer(c_int32_t), value, intent(in) :: isOneBased
    end function tecZoneWritePolyBoundaryConnections32

integer(c_int32_t) function tecZoneWritePolyBoundaryConnections64( &
    fileHandle, &
    zone, &
    partition, &
    numBoundaryFaces, &
    faceBoundaryConnectionCounts, &
    faceBoundaryConnectionElems, &
    faceBoundaryConnectionZones, &
    isOneBased) &
    bind(c, name="tecZoneWritePolyBoundaryConnections64")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    integer(c_int32_t), value, intent(in) :: partition
    integer(c_int64_t), value, intent(in) :: numBoundaryFaces
    integer(c_int32_t), intent(in)        :: faceBoundaryConnectionCounts(*)
    integer(c_int64_t), intent(in)        :: faceBoundaryConnectionElems(*)
    integer(c_int32_t), intent(in)        :: faceBoundaryConnectionZones(*)
    integer(c_int32_t), value, intent(in) :: isOneBased
end function tecZoneWritePolyBoundaryConnections64

integer(c_int32_t) function tecDataSetAddAuxData( &
    fileHandle, &
    name, &
    value) &
    bind(c, name="tecDataSetAddAuxData")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)       :: fileHandle
    character(c_char), intent(in)        :: name(*)
    character(c_char), intent(in)        :: value(*)
end function tecDataSetAddAuxData

integer(c_int32_t) function tecVarAddAuxData( &
    fileHandle, &
    var, &
    name, &
    value) &
    bind(c, name="tecVarAddAuxData")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: var
    character(c_char), intent(in)         :: name(*)
    character(c_char), intent(in)         :: value(*)
end function tecVarAddAuxData

integer(c_int32_t) function tecZoneAddAuxData( &
    fileHandle, &
    zone, &
    name, &
    value) &
    bind(c, name="tecZoneAddAuxData")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    integer(c_int32_t), value, intent(in) :: zone
    character(c_char), intent(in)         :: name(*)
    character(c_char), intent(in)         :: value(*)
end function tecZoneAddAuxData

integer(c_int32_t) function tecGeom2DLineSegmentsBegin( &
    fileHandle, &
    xOrigin, &
    yOrigin, &
    numPoints, &
    relativeX, &
    relativeY, &
    posCoordMode) &
    bind(c, name="tecGeom2DLineSegmentsBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xOrigin
    real(c_double), value, intent(in)     :: yOrigin
    integer(c_int32_t), value, intent(in) :: numPoints
    real(c_double), intent(in)            :: relativeX(*)
    real(c_double), intent(in)            :: relativeY(*)
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeom2DLineSegmentsBegin

integer(c_int32_t) function tecGeom2DMultiLineSegmentsBegin( &
    fileHandle, &
    xOrigin, &
    yOrigin, &
    numSegments, &
    numSegmentPoints, &
    relativeX, &
    relativeY, &
    posCoordMode) &
    bind(c, name="tecGeom2DMultiLineSegmentsBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xOrigin
    real(c_double), value, intent(in)     :: yOrigin
    integer(c_int32_t), value, intent(in) :: numSegments
    integer(c_int32_t), intent(in)        :: numSegmentPoints(*)
    real(c_double), intent(in)            :: relativeX(*)
    real(c_double), intent(in)            :: relativeY(*)
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeom2DMultiLineSegmentsBegin

integer(c_int32_t) function tecGeom3DLineSegmentsBegin( &
    fileHandle, &
    xOrigin, &
    yOrigin, &
    zOrigin, &
    numPoints, &
    relativeX, &
    relativeY, &
    relativeZ) &
    bind(c, name="tecGeom3DLineSegmentsBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xOrigin
    real(c_double), value, intent(in)     :: yOrigin
    real(c_double), value, intent(in)     :: zOrigin
    integer(c_int32_t), value, intent(in) :: numPoints
    real(c_double), intent(in)            :: relativeX(*)
    real(c_double), intent(in)            :: relativeY(*)
    real(c_double), intent(in)            :: relativeZ(*)
end function tecGeom3DLineSegmentsBegin

integer(c_int32_t) function tecGeom3DMultiLineSegmentsBegin( &
    fileHandle, &
    xOrigin, &
    yOrigin, &
    zOrigin, &
    numSegments, &
    numSegmentPoints, &
    relativeX, &
    relativeY, &
    relativeZ) &
    bind(c, name="tecGeom3DMultiLineSegmentsBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xOrigin
    real(c_double), value, intent(in)     :: yOrigin
    real(c_double), value, intent(in)     :: zOrigin
    integer(c_int32_t), value, intent(in) :: numSegments
    integer(c_int32_t), intent(in)        :: numSegmentPoints(*)
    real(c_double), intent(in)            :: relativeX(*)
    real(c_double), intent(in)            :: relativeY(*)
    real(c_double), intent(in)            :: relativeZ(*)
end function tecGeom3DMultiLineSegmentsBegin

integer(c_int32_t) function tecGeomCircleBegin( &
    fileHandle, &
    xCenter, &
    yCenter, &
    radius, &
    posCoordMode) &
    bind(c, name="tecGeomCircleBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xCenter
    real(c_double), value, intent(in)     :: yCenter
    real(c_double), value, intent(in)     :: radius
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeomCircleBegin

integer(c_int32_t) function tecGeomEllipseBegin( &
    fileHandle, &
    xCenter, &
    yCenter, &
    width, &
    height, &
    posCoordMode) &
    bind(c, name="tecGeomEllipseBegin")
    use iso_c_binding
    implicit none
    type(c_ptr), value, intent(in)        :: fileHandle
    real(c_double), value, intent(in)     :: xCenter
    real(c_double), value, intent(in)     :: yCenter
    real(c_double), value, intent(in)     :: width
    real(c_double), value, intent(in)     :: height
    integer(c_int32_t), value, intent(in) :: posCoordMode
end function tecGeomEllipseBegin
